--- a/style.css
+++ b/style.css
@@ -90,3 +90,15 @@ body {
     }
 }
 /* End of Navbar */
+
+/* Cards */
+.card-common {
+    box-shadow: 1px 2px 5px #999;
+    transition: all .4s;
+}
+
+.card-common:hover {
+    box-shadow: 2px 3px 15px #999;
+    transform: translateY(-1px);
+}
+/* End of Cards */
