--- a/style.css
+++ b/style.css
@@ -102,3 +102,9 @@ body {
     transform: translateY(-1px);
 }
 /* End of Cards */
+
+/* Task List */
+.task-border {
+    border-left: 3px solid #f66436;
+}
+/* End of Task List */
